Bug 791189: Exit signal filters early when signal not handled, remove service reg/unreg to fix bt crashes; r=dhylands